Ajustando Diagrama e Testes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=backend-juridico
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=admin
 #spring.datasource.password=admin
+
+#Postgres Railway para testes
 spring.datasource.url=jdbc:postgresql://maglev.proxy.rlwy.net:43254/railway
 spring.datasource.username=postgres
 spring.datasource.password=VRjFQDHueNuttlyppTGyzGtGxFlVawVG
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
