configuracao swagger para railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.datasource.url=jdbc:postgresql://maglev.proxy.rlwy.net:43254/railway
 spring.datasource.username=postgres
 spring.datasource.password=VRjFQDHueNuttlyppTGyzGtGxFlVawVG
 
+springdoc.swagger-ui.use-root-path=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+server.forward-headers-strategy=framework
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
