--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 
-spring.profiles.active=prd
+spring.profiles.active=local
 spring.application.name=backend-juridico
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=admin
